--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,12 +1,78 @@
-.rock {
-    width: 100px;
-    height: 100px;
-}
-.paper {
-    width: 100px;
-    height: 100px;
-}
+.rock,
+.paper,
 .scissors {
-    width: 100px;
-    height: 100px;
+  width: 300px;
+  height: 300px;
+  margin: 100px;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.finalInput,
+.finalPc {
+  opacity: 0;
+}
+
+.animation {
+  animation: disappear 2s ease-in-out both;
+}
+
+@keyframes disappear {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+
+  25% {
+    transform: scale(1.2);
+    opacity: 0.25;
+  }
+
+  50% {
+    transform: scale(0.8);
+    opacity: 1;
+  }
+
+  75% {
+    transform: scale(1.2);
+    opacity: 0;
+  }
+
+  100% {
+    transform: scale(1);
+    opacity: 0;
+  }
+}
+
+.invisible {
+  animation: appear 2s ease-in-out both;
+}
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+
+  25% {
+    opacity: 0.25;
+  }
+
+  50% {
+    opacity: 0.5;
+  }
+
+  75% {
+    opacity: 0.75;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
