--- a/app/css/style.css
+++ b/app/css/style.css
@@ -24,12 +24,12 @@ html, body, * {
   font-size: 75px;
 
 }
-.textContainer {
-  text-align: center;
-}
+.textContainer,
+.textContainerTwo,
 .endContainer {
   text-align: center;
 }
+
 .win,
 .lose,
 .tie {
@@ -38,14 +38,18 @@ html, body, * {
 }
 .rock,
 .paper,
-.scissors {
+.scissors,
+.pcChoice {
   width: 300px;
   height: 300px;
   margin: 100px;
+  margin-top: 50px;
+  margin-bottom: 0px;
 }
 .rockimg,
 .paperimg,
-.scissorsimg {
+.scissorsimg,
+.pcImg {
   width: 200px;
   height: 200px;
 }
@@ -59,8 +63,17 @@ html, body, * {
   justify-content: center;
 }
 
+.textContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
 .finalInput,
 .finalPc,
+.pcImg,
 .result,
 .replayButton {
   opacity: 0;
@@ -70,29 +83,34 @@ html, body, * {
   animation: explode 2s ease-in-out both;
 }
 
-.revealFinal {
+.twoSeconds {
   animation: appear 2s ease-in-out both;
 }
 
-.playAgain {
+.threeSeconds {
   animation: appear 3s ease-in-out both;
 }
 
-.showChoices {
+.fourSeconds {
   animation: appear 4s ease-in-out both;
 }
 
-.revealResult {
+.fiveSeconds {
+  animation: appear 5s ease-in-out both;
+}
+
+.sixSeconds {
   animation: appear 6s ease-in-out both;
 }
 
-.nextRound {
+.sevenSeconds {
   animation: appear 7s ease-in-out both;
 }
 
 .resetButtons {
   animation: resetButtons 2s ease-in-out both;
 }
+
 @keyframes resetButtons {
   0% {
     opacity: 0;
