--- a/app/css/style.css
+++ b/app/css/style.css
@@ -5,13 +5,24 @@ html, body, * {
   box-sizing: border-box;
 } 
 
+body {
+  background-color: #afb7bd;
+    background-image: url('/background.png');
+    background-size: 20%; 
+    background-repeat: repeat; 
+    background-position: top; 
+    background-blend-mode: lighten;
+}
+
 .endButton,
 .nextButton,
 .replayButton {
   margin-top: 50px;
-  font-size: 50px;
-  display: block; 
-  margin: 0 auto;
+  margin-bottom: 50px;
+  font-size: 50px; 
+  background-color: #1cab09;
+  border-radius: 10px;
+  transition: transform 0.2s ease, background-color 0.3s ease; 
 }
 
 .finalInput,
@@ -26,7 +37,8 @@ html, body, * {
 }
 .textContainer,
 .textContainerTwo,
-.endContainer {
+.endContainer,
+.buttonContainer {
   text-align: center;
 }
 
@@ -36,6 +48,7 @@ html, body, * {
   font-size: 50px;
   margin-top: 50px;
 }
+
 .rock,
 .paper,
 .scissors,
@@ -45,7 +58,17 @@ html, body, * {
   margin: 100px;
   margin-top: 50px;
   margin-bottom: 0px;
+  background-color: #1cab09; 
+  border-radius: 50%;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease, background-color 0.3s ease; 
 }
+
+button:hover {
+  background-color: #116c05;
+}
+
+
 .rockimg,
 .paperimg,
 .scissorsimg,
@@ -63,7 +86,9 @@ html, body, * {
   justify-content: center;
 }
 
-.textContainer {
+.container,
+.textContainer,
+.buttonContainer, {
   width: 100%;
   height: 100%;
   display: flex;
@@ -71,6 +96,7 @@ html, body, * {
   align-items: center;
   justify-content: center;
 }
+
 .finalInput,
 .finalPc,
 .pcImg,
